--- a/golf-match-provider/pom.xml
+++ b/golf-match-provider/pom.xml
@@ -72,6 +72,17 @@
             <version>1.7.25</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.21.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
