--- a/golf-match-provider/src/main/resource/application.properties
+++ b/golf-match-provider/src/main/resource/application.properties
@@ -1,10 +1,10 @@
 server.port= 18080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/t104?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/t104?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=yixingju
 spring.datasource.password=110119
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-mybatis.mapper-location=classpath: *Mapper.xml
+#mybatis.mapper-location=classpath: *Mapper.xml
 
 spring.dubbo.application.name=golf-match-provider
 spring.dubbo.registry.address=zookeeper://39.106.156.212:2181
